fix dark mode

--- a/src/app/cms-modules/estate/property/list/list.component.scss
+++ b/src/app/cms-modules/estate/property/list/list.component.scss
@@ -1,7 +1,12 @@
 .float-left {
-    float: left !important;
+  float: left !important;
 }
 
 .pointer {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: #3d0fa1;
 }
